[gd_scene load_steps=9 format=3 uid="uid://fqqci2xlrn1"]

[ext_resource type="Script" path="res://MiniGames/Wack/wack_letter.gd" id="1_ku4kd"]
[ext_resource type="AudioStream" uid="uid://i2ytesq2a73c" path="res://Sounds/hitHurt.wav" id="2_mkkw5"]
[ext_resource type="Texture2D" uid="uid://4odi10yqvrxb" path="res://MiniGames/Wack/WackArt/WackIdle.tres" id="3_ipneg"]
[ext_resource type="AudioStream" uid="uid://bk6mogk22tf33" path="res://Sounds/retro-video-game-sfx-fail.wav" id="3_pn7vk"]
[ext_resource type="Texture2D" uid="uid://y6qoyyo0oikf" path="res://MiniGames/Wack/WackArt/A.tres" id="4_57jys"]
[ext_resource type="AudioStream" uid="uid://ca8wx37rwj1b7" path="res://Sounds/159408__noirenex__life-lost-game-over.wav" id="4_uk7uc"]
[ext_resource type="AudioStream" uid="uid://bbl0ssoejcg0y" path="res://Sounds/tada.wav" id="5_vb5ic"]
[ext_resource type="Texture2D" uid="uid://bmc5074af1xe8" path="res://MiniGames/RPS/RPSart/dodgefruit_minigame.PNG" id="6_0nuae"]

[node name="target_control" type="Node2D"]
visible = false

[node name="Node2D" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("1_ku4kd")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(0, 0, 0, 1)
position = Vector2(795, 517)
scale = Vector2(10, 10)
texture = ExtResource("6_0nuae")

[node name="A1" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -310.0
offset_right = -385.0
offset_bottom = -225.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2, 2.2)
texture = ExtResource("3_ipneg")

[node name="A1letter" type="TextureRect" parent="CanvasLayer/A1"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 55.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("4_57jys")
stretch_mode = 4

[node name="A2" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -310.0
offset_right = -35.0
offset_bottom = -225.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2, 2.2)
texture = ExtResource("3_ipneg")

[node name="A2letter" type="TextureRect" parent="CanvasLayer/A2"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 55.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("4_57jys")
stretch_mode = 4

[node name="A3" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 201.0
offset_top = -310.0
offset_right = 316.0
offset_bottom = -225.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2, 2.2)
texture = ExtResource("3_ipneg")

[node name="A3letter" type="TextureRect" parent="CanvasLayer/A3"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 55.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("4_57jys")
stretch_mode = 4

[node name="B1" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -65.0
offset_right = -385.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2, 2.2)
texture = ExtResource("3_ipneg")

[node name="B1letter" type="TextureRect" parent="CanvasLayer/B1"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 55.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("4_57jys")
stretch_mode = 4

[node name="B2" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -65.0
offset_right = -35.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2, 2.2)
texture = ExtResource("3_ipneg")

[node name="B2letter" type="TextureRect" parent="CanvasLayer/B2"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 55.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("4_57jys")
stretch_mode = 4

[node name="B3" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 201.0
offset_top = -65.0
offset_right = 316.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2, 2.2)
texture = ExtResource("3_ipneg")

[node name="B3letter" type="TextureRect" parent="CanvasLayer/B3"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 55.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("4_57jys")
stretch_mode = 4

[node name="C1" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = 175.0
offset_right = -385.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2, 2.2)
texture = ExtResource("3_ipneg")

[node name="C1letter" type="TextureRect" parent="CanvasLayer/C1"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 55.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("4_57jys")
stretch_mode = 4

[node name="C2" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 175.0
offset_right = -35.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2, 2.2)
texture = ExtResource("3_ipneg")

[node name="C2letter" type="TextureRect" parent="CanvasLayer/C2"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 55.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("4_57jys")
stretch_mode = 4

[node name="C3" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 201.0
offset_top = 175.0
offset_right = 316.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2, 2.2)
texture = ExtResource("3_ipneg")

[node name="C3letter" type="TextureRect" parent="CanvasLayer/C3"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 55.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("4_57jys")
stretch_mode = 4

[node name="target0" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 385.0
offset_top = 264.0
offset_right = 531.0
offset_bottom = 290.0
scale = Vector2(2, 2)
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="target1" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 747.0
offset_top = 262.0
offset_right = 893.0
offset_bottom = 288.0
scale = Vector2(2, 2)
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 1101.0
offset_top = 261.0
offset_right = 1247.0
offset_bottom = 287.0
scale = Vector2(2, 2)
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label4" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 384.0
offset_top = 503.0
offset_right = 530.0
offset_bottom = 529.0
scale = Vector2(2, 2)
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label5" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 745.0
offset_top = 503.0
offset_right = 891.0
offset_bottom = 529.0
scale = Vector2(2, 2)
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label6" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 1099.0
offset_top = 494.0
offset_right = 1245.0
offset_bottom = 520.0
scale = Vector2(2, 2)
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label7" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 385.0
offset_top = 755.0
offset_right = 531.0
offset_bottom = 781.0
scale = Vector2(2, 2)
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label8" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_top = -0.00154321
anchor_right = 0.000868056
offset_left = 735.0
offset_top = 754.543
offset_right = 881.0
offset_bottom = 780.543
scale = Vector2(2, 2)
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="Label9" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 1101.0
offset_top = 754.0
offset_right = 1247.0
offset_bottom = 780.0
scale = Vector2(2, 2)
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="HitTimer" type="Timer" parent="CanvasLayer"]
wait_time = 1.273

[node name="HoldTimer" type="Timer" parent="CanvasLayer"]

[node name="EndTimer" type="Timer" parent="CanvasLayer"]
wait_time = 2.065

[node name="---Sounds" type="Node" parent="CanvasLayer"]

[node name="HitSfx" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("2_mkkw5")
volume_db = -3.881

[node name="MissSfx" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("3_pn7vk")
volume_db = -16.472

[node name="LooseSfx" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("4_uk7uc")
volume_db = -11.534
pitch_scale = 1.1

[node name="WinSfx" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("5_vb5ic")
volume_db = -23.31

[connection signal="timeout" from="CanvasLayer/HitTimer" to="CanvasLayer" method="_on_hit_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/HoldTimer" to="CanvasLayer" method="_on_hold_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/EndTimer" to="CanvasLayer" method="_on_end_timer_timeout"]
